# src/api/routers/category.go
@@ -13,5 +13,6 @@ func Category(r *gin.RouterGroup, cfg *config.Config) {
 	r.PUT("/:id", h.Update)
 	r.DELETE("/:id", h.Delete)
 	r.GET("/:id", h.GetById)
+	r.POST("/get-by-filter", h.GetByFilter)
 
 }
